--- a/public/bootstrap-theme/public-style.css
+++ b/public/bootstrap-theme/public-style.css
@@ -34,3 +34,30 @@ header img {
     max-width: 430px;
 }
 
+/* ============================================= */
+.parsley-error{
+    border-color: #dc3545;
+    
+    /* background-image:url(data:image/svg+xml,%3csvg xmlns='http://www.w3.org/2000/svg' fill='%23dc354…%3e%3ccircle cy='3' r='.5'/%3e%3ccircle cx='3' cy='3' r='.5'/%3e%3c/svg%3E);  */
+    background-repeat: no-repeat;
+    background-position: center right calc(.375em + .1875rem);
+    background-size: calc(.75em + .375rem) calc(.75em + .375rem);
+}
+.parsley-error:focus {
+    border-color: #f5c6cb;
+    box-shadow: inset 0 0 0 transparent, 0 0 0 0.15rem #f5c6cb;
+}
+.parsley-success:focus{
+ 	border-color: #c3e6cb;
+    box-shadow: inset 0 0 0 transparent, 0 0 0 0.15rem #c3e6cb;
+}
+.parsley-errors-list{
+	font-size: 13px;
+	color: #bd2130;
+    list-style-type: none;
+    padding-right: 0 !important;
+}
+/* body.modal-open, body.swal2-shown {
+	padding-right: 0 !important;
+} */
+
